# localcowork-lite

./: .dockerignore  .env.example  .gitignore  README.md  build-pyinstaller.sh  build-tauri.sh  debug-sidecar.sh  docker-compose.gpu.yaml  docker-compose.yaml  notes.md  pyproject.toml
.github/workflows/: pytest.yml  release.yml
backend/: config.py  launcher.py  main.py
backend/agent_core/: audit.py  conversation.py  db.py  tool_router.py
backend/inference/: client.py
backend/mcp_servers/audit/: server.py
backend/mcp_servers/document/: server.py
backend/mcp_servers/filesystem/: server.py
backend/mcp_servers/google/: server.py
backend/mcp_servers/knowledge/: server.py
backend/mcp_servers/system/: server.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.model  Dockerfile.model.gpu  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: SystemInfoChart.tsx
scripts/: setup-dev.sh  start-model.sh
tests/: conftest.py  test_conversation.py  test_db.py  test_tool_router.py
