[package]
name = "localcowork-lite"
version = "0.1.0"
edition = "2021"

[lib]
name = "localcowork_lite"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri              = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
reqwest            = { version = "0.12", features = ["json"] }
tokio              = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
